force-app/main/default/objects/cgcloud__Tactic_Fund__c/cgcloud__Tactic_Fund__c.object-meta.xml
<CustomObject>
    <description>Relation between Tactic and Fund</description>
    <label>Tactic Fund</label>
    <nameField>
        <displayFormat>TF-{0000000}</displayFormat>
        <label>Tactic Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactic Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>