force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Active_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active_Tactic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copies value of related Tactic&apos;s Included attribute, to indicate whether or not Tactic is active; Used to filter roll-up summaries on Fund object</description>
    <label>Active Tactic</label>
    <type>Checkbox</type>
</CustomField>