force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Calculated_Funding_Percent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculated_Funding_Percent__c</fullName>
    <description>Funding Percent value calculated based on Plan Spend amount allocated on Tactic Fund and Total Plan Spend amount for Tactic. It is used when Fund Auto-Determination is disabled.</description>
    <formula>IF( NOT(ISBLANK(cgcloud__Tactic__r.cgcloud__Total_Plan_Spend__c)) , (cgcloud__Plan_Spend__c/ cgcloud__Tactic__r.cgcloud__Total_Plan_Spend__c), 0)</formula>
    <label>Funding %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>