force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund__c</fullName>
    <label>Fund</label>
    <referenceTo>cgcloud__Fund__c</referenceTo>
    <relationshipLabel>Tactic Funds</relationshipLabel>
    <relationshipName>Tactic_Funds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>