force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Fund_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Description__c</fullName>
    <description>The related Fund&apos;s description</description>
    <formula>cgcloud__Fund__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Description</label>
    <type>Text</type>
</CustomField>