force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Funding_Percent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Funding_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Funding Percent KPI value which defines the distribution for the fund. It is used when Fund Auto-Determination is enabled.</description>
    <label>Funding %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>