force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__LE_Spend__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Spend__c</fullName>
    <label>LE Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>