force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Liabilities__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Liabilities__c</fullName>
    <label>Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>