force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__OI_Costs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__OI_Costs__c</fullName>
    <label>OI Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>