force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Phase__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Phase__c</fullName>
    <description>Represents the Phase field on the Promotion object.</description>
    <label>Phase</label>
    <length>30</length>
    <type>Text</type>
</CustomField>