force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic__c</fullName>
    <description>Reference to the Tactic</description>
    <label>Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Tactic Funds</relationshipLabel>
    <relationshipName>Tactic_Funds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>