force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Tactic_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Type__c</fullName>
    <description>Reads Tactic Type off of related Tactic record, helpful for reporting purposes</description>
    <formula>cgcloud__Tactic__r.cgcloud__Tactic_Type__c</formula>
    <label>Tactic Type</label>
    <type>Text</type>
</CustomField>