force-app/main/default/objects/cgcloud__Tactic_Fund__c/fields/cgcloud__Unaccrued_Costs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unaccrued_Costs__c</fullName>
    <description>Subtracts Tactic Fund Liabilities value from LE Spend value</description>
    <formula>cgcloud__LE_Spend__c  -  cgcloud__Liabilities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unaccrued Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>