force-app/main/default/objects/cgcloud__Tactic_Fund__c/validationRules/cgcloud__Sales_Org_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Mismatch</fullName>
    <active>true</active>
    <description>The Tactic and the Fund must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Tactic__r.cgcloud__Tactic_Template__r.cgcloud__Sales_Org__c) &lt;&gt; cgcloud__Fund__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Tactic and the Fund must have the same Sales Org.</errorMessage>
</ValidationRule>